--- a/bot/platformio.ini
+++ b/bot/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+lib_deps = 
+	adafruit/Adafruit SHARP Memory Display@^1.1.1
+	moononournation/GFX Library for Arduino@^1.3.2
+	adafruit/Adafruit BusIO@^1.14.1
