--- a/bot/platformio.ini
+++ b/bot/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	adafruit/Adafruit SHARP Memory Display@^1.1.1
 	moononournation/GFX Library for Arduino@^1.3.2
 	adafruit/Adafruit BusIO@^1.14.1
+	agdl/Base64@^1.0.0
